# esp-matter

./: .codespellrc  .gitattributes  .gitlab-ci.yml  RELEASE_NOTES.md
components/esp_matter/: CMakeLists.txt  Kconfig  esp_matter.h
components/esp_matter/data_model/: esp_matter_attribute.cpp  esp_matter_attribute.h  esp_matter_cluster.cpp  esp_matter_cluster.h  esp_matter_command.cpp  esp_matter_command.h  esp_matter_delegate_callbacks.cpp  esp_matter_delegate_callbacks.h  esp_matter_endpoint.cpp  esp_matter_endpoint.h  esp_matter_event.h  esp_matter_feature.h  esp_matter_macros.h  esp_matter_optional_attribute.cpp  esp_matter_optional_attribute.h
components/esp_matter/data_model_provider/: esp_matter_data_model_provider.cpp  esp_matter_plugin_server_init_callbacks.cpp
components/esp_matter/test/: CMakeLists.txt  jsontlv.cpp
components/esp_matter_controller/commands/: esp_matter_controller_cluster_command.cpp  esp_matter_controller_cluster_command.h  esp_matter_controller_pairing_command.cpp  esp_matter_controller_read_command.cpp  esp_matter_controller_read_command.h  (+4 more)
docs/en/: certification.rst  controller.rst  faq.rst
examples/: .build-rules.yml
examples/test_apps/: pytest_esp_matter_optional_test.py
examples/test_apps/test_optional_attributes/main/: CMakeLists.txt  app_main.cpp
examples/unit_test_app/: pytest_unit_test_app.py
tools/ci/: build_apps.py
tools/data_model_gen/: .gitignore  README.md  data_model_gen.py  requirements.txt
tools/docker/chip_idf/: Dockerfile
tools/test_optional_attributes/: README.md  test_optional_attributes_framework.py
(+96 files in other folders)
